@startuml
title Microsimulation Model Class Diagram

class Patient {
    - id: int
    - name: string
    - age: int
    - gender: string
    - ethnicity: string
    - riskFactors: vector<string>
    - healthScore: double
    + applyTreatment(Treatment)
    + getHealthScore(): double
    + display(): void
}

class Policy {
    + apply(Patient): void
}

class Treatment {
    - name: string
    - efficacy: double
    + getEfficacy(): double
}

class HealthPredictor {
    + predictHealthRisk(Patient): double
}

class Simulation {
    - patients: vector<shared_ptr<Patient>>
    - policy: shared_ptr<Policy>
    + generatePopulation(int)
    + run()
    + generateReport(): void
}

Policy <|-- StandardPolicy
Policy <|-- AggressivePolicy
Simulation o-- Patient
Simulation o-- Policy
Simulation o-- HealthPredictor
Patient --> Treatment
Patient --> HealthPredictor

@enduml
